--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm install && node ./node_modules/webpack/bin/webpack.js --config build/webpack.config.js --progress",
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config build/webpack.config.js --progress",
     "build": "node ./node_modules/webpack/bin/webpack.js --config build/webpack.prod.config.js"
   },
   "author": "madiev",
@@ -37,8 +37,9 @@
     "resolve-url-loader": "^2.1.0",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
-    "webpack-visualizer-plugin": "^0.1.11"
+    "webpack-dev-server": "^2.8.2",
+    "webpack-visualizer-plugin": "^0.1.11",
+    "html-webpack-harddisk-plugin": "^0.1.0",
+    "html-webpack-plugin": "^2.30.1"
   }
 }
-
-
