--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "map",
+  "name": "start-kit",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -20,11 +20,13 @@
     "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
     "redux": "^3.7.2",
+    "redux-form": "^7.4.0",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -33,13 +35,13 @@
     "ejs": "^2.5.6",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "html-webpack-harddisk-plugin": "^0.1.0",
+    "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.7",
     "resolve-url-loader": "^2.1.0",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.8.2",
-    "webpack-visualizer-plugin": "^0.1.11",
-    "html-webpack-harddisk-plugin": "^0.1.0",
-    "html-webpack-plugin": "^2.30.1"
+    "webpack-visualizer-plugin": "^0.1.11"
   }
 }
