--- a/package.json
+++ b/package.json
@@ -11,24 +11,22 @@
   "author": "madiev",
   "license": "ISC",
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-addons-transition-group": "^15.4.2",
-    "react-dom": "^15.6.1",
-    "react-event-listener": "^0.4.5",
-    "react-redux": "^5.0.5",
+    "babel-polyfill": "^6.26.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-event-listener": "^0.6.4",
+    "react-redux": "^5.0.7",
     "react-router": "^3.0.5",
     "redux": "^3.7.2",
-    "redux-form": "^7.4.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.22.0",
     "css-loader": "^0.28.4",
