--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^5.0.7",
     "react-router": "^3.0.5",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "superagent": "^4.0.0-beta.5"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
